# idea-hypernets

./: .gitignore  .gitmodules  pyproject.toml  pyrightconfig.json
.zed/: settings.json
hyper_lap/: __init__.py  metrics.py
hyper_lap/datasets/: __init__.py  amos.py  amos_sliced.py  base.py  degenerate.py  lidc_idri.py  medidec.py  medidec_sliced.py  metadata.py  multi_dataloader.py  nifti.py  normalised.py  preloaded.py  sliced.py  total_segmentator.py
hyper_lap/embedder/: __init__.py  clip.py  conv_next.py  dino.py  learned.py  null.py  resnet.py  vit.py
hyper_lap/hyper/: __init__.py  attn_hypernet.py  attn_res_hypernet.py  embedder.py  generator.py  hypernet.py  res_hypernet.py
hyper_lap/layers/: __init__.py  _util.py  activations.py  adaptor_unet.py  attention.py  attn_unet.py  conv.py  convnext.py  film_unet.py  resnet.py  unet.py  upsample.py  vae.py  vit.py
hyper_lap/models/: __init__.py  _unet.py  adaptor_hypernet.py  adaptor_unet.py  attn_hypernet.py  attn_unet.py  film_unet.py  hypernet.py  latent.py  unet.py  vit_segmentator.py
hyper_lap/modules/: __init__.py  _util.py  attention.py  attn_unet.py  auto_encoder.py  conv.py  convnext.py  embedder.py  film_unet.py  hessian_unet.py  resnet.py  unet.py  upsample.py  vae.py  vit.py
hyper_lap/serialisation/: __init__.py  equinox.py  safetensors.py  utils.py
hyper_lap/training/: MediDec01.ipynb  amos1_hypernet.py  amos1_unet.py  amos_all_hypernet.py  amos_hypernet_1.py  amos_hypernet_all.py  amos_unet_1.py  film_unet_all.py  film_unet_latent_all.py  hypernet_1.py  hypernet_all.py  hypernet_res_all.py  lidc_idri_hypernet.py  lidc_idri_unet.py  loss.py  medidec1_hypernet.py  medidec1_unet.py  medidec_all_hypernet.py  medidec_hypernet_1.py  medidec_hypernet_all.py  medidec_unet_1.py  metrics.py  trainer.py  unet.py  unet_1.py  unet_all.py  utils.py
scripts/: extract_vae_weights.py  make_sample_images.py  revalidate.py  slice_amos.py  slice_medidec.py  train_adaptor_hypernet.py  train_attn_hypernet.py  train_attn_res_hypernet.py  train_attn_unet.py  train_film_unet.py  train_hypernet.py  train_hypernet_res.py  train_hypernet_res_decoder.py  train_hypernet_res_encoder.py  train_res_hypernet.py  train_res_hypernet_decoder.py  train_res_hypernet_encoder.py  train_unet.py  train_vit_seg.py
