[project]
name = "idea-laplacian-hypernet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox-hessian==0.2.0",
    "jax[cuda]==0.5.0",
    "jaxtyping>=0.2.34",
    "equinox>=0.11.8",
    "optax>=0.2.4",
    "flax>=0.10.2",
    "transformers>=4.48.0",
    "torch>=2.5.1",
    "nibabel==5.3.2",
    "tqdm>=4.67.0",
    "umap-learn>=0.5.7",
    # for umap-learn
    "llvmlite>=0.44.0",
    "numba>=0.61.0",
    "safetensors>=0.5.2",
]


[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
    "beartype>=0.19.0",
    "black>=24.10.0",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "matplotlib>=3.10.0",
    "pyqt6>=6.8.0",
    "pip>=24.3.1",
    "notebook>=7.3.2",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
equinox-hessian = { path = "equinox-hessian" }
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hyper_lap/*"]


[tool.black]
line-length = 100
# exclude-extend = '''
# '''

[tool.isort]
line_length = 100
profile = "black"
known_typing = "typing,collections.abc,jaxtyping"
# default: "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
# skip_glob = [""]  # files/folders/... to skip
# known_first_party = [""]  # packages that are forced as first party
# src_paths = [""]  # files inside these paths are treated as first party
# multi_line_output = 5
float_to_top = true
group_by_package = true
combine_as_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F722"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
