[project]
name = "idea-laplacian-hypernet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda]==0.7.1",
    # "nvidia-cublas-cu12~=12.6.0",
    # "nvidia-cuda-cupti-cu12~=12.6.0",
    # "nvidia-cuda-nvcc-cu12~=12.6.0",
    # "nvidia-cuda-runtime-cu12~=12.6.0",
    # "nvidia-cudnn-cu12~=9.8.0",
    # "nvidia-nvjitlink-cu12~=12.6.0",
    "jaxtyping>=0.2.34",
    "beartype>=0.19.0",
    "equinox>=0.11.8",
    "optax>=0.2.4",
    "flax>=0.10.2",
    "grain>=0.2.12",
    "safetensors>=0.5.2",
    "transformers>=4.48.0",
    "diffusers[flax]>=0.32.2",
    "scikit-image>=0.25.1",
    "nibabel==5.3.2",
    "matplotlib>=3.10.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.67.0",
    "wandb>=0.19.6",
    "umap-learn>=0.5.9",
    "pydantic>=2.11.4",
    "dinov3-equinox",
]


[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "pyqt6>=6.8.0",
    "pip>=24.3.1",
    "ipython>=8.31.0",
    "notebook>=7.3.2",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "polars>=1.30.0",
    "pyrefly>=0.29.0",
    "ty>=0.0.1a19",
    "basedpyright>=1.31.4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
dinov3-equinox = { git = "https://github.com/MorizzG/dinov3-equinox" }
torch = { index = "pytorch-cpu" }
# umap-learn = { git = "https://github.com/lmcinnes/umap" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = ["hyper_lap/*"]


[tool.black]
line-length = 100
# exclude-extend = '''
# '''

[tool.isort]
line_length = 100
profile = "black"
known_typing = "typing,collections.abc,jaxtyping"
# default: "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
# skip_glob = [""]  # files/folders/... to skip
# known_first_party = [""]  # packages that are forced as first party
known_third_party = ["wandb"] # packages that are forced as third party
# src_paths = [""]  # files inside these paths are treated as first party
# multi_line_output = 5
float_to_top = true
group_by_package = true
combine_as_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.pyrefly]
project-includes = ["hyper_lap", "scripts"]
project-excludes = ["**/*venv/**/*"]

replace-imports-with-any = ["wandb"]
